# licenta-engine3d

./: CMakeLists.txt  info.plist  main.cpp
src/base/: EngineManager.h  Libraries.h  SceneManager.h  Window.h
src/base/drawer/: Drawer.h
src/base/events/: KeyboardHandler.h
src/base/interaction/: Importer.h
src/base/model/: AliveObject.h  Button.h  Canvas.h  InteractionContainer.h  Label.h  UIVisibleObject.h  ViewContainer.h
src/base/model/shape/: Rectangle.h  Shape.h
src/base/scene/: Scene.h
src/base/space/: Camera.h  Space.h  SpaceObject.h
src/base/space/objects/: ObjectCuboid.h
src/custom/global/menu/: Menu.h  MenuItem.h
src/custom/scene/: ExampleScene.h
src/math/: BiLine.h  BiVector.h  ControlPoint.h  MathConstants.h  Matrix.h  MeshTriangle.h  Plane.h  Quaternion.h  Transformer.h  TriVector.h
src/options/: EngineConstants.h  EngineValues.h  Path.h  UIValues.h
src/support/: Color.h  Util.h
